add download function

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
             <button id="uploadButton">Choose Image</button>
             <input type="file" id="imageUpload" accept="image/*" />
           </div>
+          <div class="control-group">
+            <button id="downloadButton" disabled>Download Image</button>
+          </div>
         </div>
 
         <div class="control-row">
